<resources>
    <string name="app_name">Test MVVM</string>
    <string name="login_activity_email_hint">Email</string>
    <string name="login_activity_password_hint">Password</string>
    <string name="login_forgot_password">Forgot your password?</string>
    <string name="login_remember_password">Remember</string>
    <string name="login_sign_in">Sign in</string>
    <string name="login_sign_up">Sign up</string>
    <string name="login_sign_in_with_google">Sign in with google</string>
</resources>
