<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLoginActivityBackground"
    tools:context=".view.LoginActivity">

    <!--Company logo-->
    <ImageView
        android:id="@+id/image_view_login_logo"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@id/constraintlayout_login"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <!-- Email, password fields, all buttons-->
    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintlayout_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/default_activity_horizontal_margin"
        android:layout_marginStart="@dimen/default_activity_horizontal_margin"
        android:focusableInTouchMode="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_view_login_logo">

        <!--Email edit text-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textinputlayout_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/ErrorAppearance"
            app:hintEnabled="true"
            app:hintTextAppearance="@style/HintAppearance"
            app:layout_constraintBottom_toTopOf="@id/textinputlayout_login_password"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_medium"
                android:hint="@string/login_activity_email_hint"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <!--Password edit text-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textinputlayout_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/ErrorAppearance"
            app:hintEnabled="true"
            app:hintTextAppearance="@style/HintAppearance"
            app:layout_constraintTop_toBottomOf="@id/textinputlayout_login_email"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/primaryDarkColor">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_medium"
                android:hint="@string/login_activity_password_hint"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <!--Forgot password text-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway_medium_italic"
            android:text="@string/login_forgot_password"
            android:textColor="@color/primaryDarkColor"
            app:layout_constraintBottom_toBottomOf="@id/checkbox_login_remember_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/checkbox_login_remember_password" />

        <!--Remember password checkbox-->
        <CheckBox
            android:id="@+id/checkbox_login_remember_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/raleway_medium"
            android:text="@string/login_remember_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textinputlayout_login_password" />

        <!--Sign in button-->
        <Button
            android:id="@+id/button_login_sign_in"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/login_sign_in"
            app:layout_constraintEnd_toStartOf="@id/button_login_sign_up"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkbox_login_remember_password" />

        <!--Sign up button-->
        <Button
            android:id="@+id/button_login_sign_up"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/login_sign_up"
            android:textColor="@color/button_sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_login_sign_in"
            app:layout_constraintTop_toBottomOf="@id/checkbox_login_remember_password" />

        <!--Sign in with Google-->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/login_sign_in_with_google"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_login_sign_in" />
        <!--TODO изменить background кнопки sign up в зажатом состояние-->
        <!--TODO sign in with google button - сделать image button с иконкой гугла-->

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>